[package]
name = "strike-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
url = "2.5"
